# Ctemplate

./: .gitignore  flake.nix  meson.build  readme.md
src/: main.c
subprojects/: klib.wrap
tools/: get-files.py
